--- a/style.css
+++ b/style.css
@@ -1,4 +1,17 @@
-body
-{
-background-color:red;
+body{
+    background:#f3f3f3;
+    color:#333;
+    width:100%;
+    font-family:sans-serif;
+    margijn:0 auto;
 }
+
+.header{
+    width:90%;
+    margin:auto;
+    height:120px;
+    line-height:120px;
+    background:#417aa8;
+    color:#fff;
+}
+    
