--- a/style.css
+++ b/style.css
@@ -19,4 +19,12 @@ body{
     padding:0 2pc;
 }
     
+.menu{
+    background-color:#417aa8
+    height:50px;
+    position:relative;
+    width:90%;
+    margin:0 auto;
+    padding:0 auto;
+}
 
