--- a/style.css
+++ b/style.css
@@ -20,11 +20,25 @@ body{
 }
     
 .menu{
-    background-color:#417aa8
+    background-color:#417aa8;
     height:50px;
+    line-height:50px;
     position:relative;
     width:90%;
     margin:0 auto;
     padding:0 auto;
+}
+
+.menu ul {
+    list-style:none;
+}
+
+.menu ul li a {
+    float:left;
+    width:70px;
+    display:block;
+    text-align:center;
+    color:#FFF;
+    text-decoration:none;
 }
 
