--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{
     height:120px;
     line-height:120px;
     background:#417aa8;
-    color:#fff;
+    color:#FFF;
 }
 
 .jarak{
@@ -46,4 +46,5 @@ body{
     background-color:#4b88bb;
     display:block;
 }
+
 
